# CBC3D_I2M_Conversion_SlicerExtension

./: CMakeLists.txt  LICENSE.txt  README.txt
BodyCentricCubicMesh/: BodyCentricCubicMesh.cxx  BodyCentricCubicMesh.xml  CMakeLists.txt  LICENSE.txt  README.txt  itkBinaryMaskTo3DAdaptiveMeshFilter.cxx  itkBinaryMaskTo3DAdaptiveMeshFilter.h  predicates.c
BodyCentricCubicMesh/Data/Baseline/brain/: brain_BCC_mesh.vtk
BodyCentricCubicMesh/Data/Baseline/nidus/: nidus_BCC_mesh.vtk
BodyCentricCubicMesh/Data/Baseline/ventricles/: ventricles_BCC_mesh.vtk
BodyCentricCubicMesh/Testing/Cxx/: CMakeLists.txt
MeshCompression/: CMakeLists.txt  LICENSE.txt  MeshCompression.cxx  MeshCompression.xml  README.txt  itkFEMCompressor.h  itkFEMCompressor.hxx  itkFEMCompressorSolver.h  itkFEMCompressorSolver.hxx  itkTetrahedralMeshWriter.cxx  itkTetrahedralMeshWriter.h
MeshCompression/Data/Baseline/: brainMesh.vtk  nidusMesh.vtk  ventriclesMesh.vtk
MeshCompression/Data/Baseline/brain/: brain_BCC_mesh_deformed.vtk
MeshCompression/Data/Baseline/nidus/: nidus_BCC_mesh_deformed.vtk
MeshCompression/Data/Baseline/ventricles/: ventricles_BCC_mesh_deformed.vtk
MeshCompression/Testing/Cxx/: CMakeLists.txt
